Правка по замечаниям @Mokriza